force-app/main/default/objects/JobPositionAssignment/JobPositionAssignment.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>