force-app/main/default/objects/JobPositionAssignment/fields/Created_From_Sign_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Sign_Up_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is checked if the volunteer used the Sign Up link to register for their volunteer activity.</inlineHelpText>
    <label>Created From Sign Up Link</label>
    <type>Checkbox</type>
</CustomField>