force-app/main/default/objects/JobPositionAssignment/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This is populated to save the information from the Sign Up Guest User flow through Experience Cloud. An automated trigger flow runs on J.P. Assignment to create and or update a Person Account.</description>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>