force-app/main/default/objects/JobPositionAssignment/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This is populated to save the information from the Sign Up Guest User flow through Experience Cloud. An automated trigger flow runs on J.P. Assignment to create and or update a Person Account.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>