force-app/main/default/objects/JobPositionAssignment/fields/Mass_Quick_Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Mass_Quick_Update_Field__c</fullName>
    <inlineHelpText>This field describes the mass quick update action and the fields that will be updated. There is no need to edit this field.</inlineHelpText>
    <label>Mass Quick Update Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>