force-app/main/default/objects/JobPositionAssignment/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>JobPosition.Title</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>