force-app/main/default/objects/JobPositionAssignment/fields/Scheduled_Duration__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Duration__c</fullName>
    <formula>IF(AND(ISBLANK(ScheduledStartTime),ISBLANK(ScheduledEndTime)), 
 AssignedPositionShift.Default_Duration__c  ,
ROUND((ScheduledEndTime-ScheduledStartTime)*24,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is calculated by the J.P. Shift&apos;s Start and End Time, or if there is no J.P. Shift then by the Scheduled End Time or Start Time on this record.</inlineHelpText>
    <label>Scheduled Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>