force-app/main/default/objects/JobPositionAssignment/fields/Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_ID__c</fullName>
    <inlineHelpText>This stores the volunteer ID provided by the guest user flow and is used to prevent data duplication.</inlineHelpText>
    <label>Volunteer ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>