force-app/main/default/objects/JobPositionAssignment/fields/What_motivated_you_to_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>What_motivated_you_to_Volunteer__c</fullName>
    <label>What motivated you to Volunteer?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>