force-app/main/default/objects/JobPositionAssignment/fields/Would_you_recommend__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend__c</fullName>
    <label>Would you recommend this activity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>