force-app/main/default/objects/JobPositionAssignment/validationRules/Absent.validationRule-meta.xml
<ValidationRule>
    <fullName>Absent</fullName>
    <active>true</active>
    <description>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Absent&quot;), ActualDuration   &lt;&gt;   0)</errorConditionFormula>
    <errorMessage>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</errorMessage>
</ValidationRule>