force-app/main/default/objects/JobPositionAssignment/listViews/All_JobPositionAssignments.listView-meta.xml
<ListView>
    <fullName>All_JobPositionAssignments</fullName>
    <filterScope>Everything</filterScope>
    <label>All Job Position Assignments</label>
</ListView>